--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:4.3.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
     def arch_core_version = "2.1.0"
     testImplementation "androidx.arch.core:core-testing:$arch_core_version"
     androidTestImplementation "androidx.arch.core:core-testing:$arch_core_version"
